--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@mui/x-data-grid": "^6.9.0",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@supabase/supabase-js": "^2.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
