--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@supabase/supabase-js": "^2.26.0",
+    "@uiball/loaders": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
