--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nivo/pie": "^0.83.0",
     "@supabase/supabase-js": "^2.26.0",
     "@uiball/loaders": "^1.3.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
