--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@nivo/pie": "^0.83.0",
     "@supabase/supabase-js": "^2.26.0",
     "@uiball/loaders": "^1.3.0",
+    "dotenv": "^16.3.1",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
