--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# environment variables
+*.env
+*.local
+*.env.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
